[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/components/SliceEditor.gd" type="Script" id=1]
[ext_resource path="res://ui/icons/icon_pause.png" type="Texture" id=2]
[ext_resource path="res://ui/icons/icon_run.png" type="Texture" id=3]
[ext_resource path="res://ui/icons/icon_help.png" type="Texture" id=4]
[ext_resource path="res://ui/icons/icon_error.png" type="Texture" id=5]
[ext_resource path="res://ui/components/CodeEditor.gd" type="Script" id=6]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=7]
[ext_resource path="res://ui/components/ViewModeToggleButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/icons/icon_console.png" type="Texture" id=9]

[node name="CodeEditor" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="SliceEditor" type="TextEdit" parent="Column"]
margin_right = 1920.0
margin_bottom = 883.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
smooth_scrolling = true
wrap_enabled = true
caret_block_mode = true
caret_blink = true
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Column"]
margin_top = 899.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="Column" type="VBoxContainer" parent="Column/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 161.0
mouse_filter = 2

[node name="Row" type="HBoxContainer" parent="Column/MarginContainer/Column"]
margin_right = 1880.0
margin_bottom = 63.0
mouse_filter = 2
alignment = 1

[node name="RunButton" type="Button" parent="Column/MarginContainer/Column/Row"]
margin_left = 676.0
margin_right = 836.0
margin_bottom = 63.0
rect_min_size = Vector2( 160, 40 )
text = "Run"
icon = ExtResource( 3 )

[node name="PauseButton" type="Button" parent="Column/MarginContainer/Column/Row"]
margin_left = 852.0
margin_right = 1012.0
margin_bottom = 63.0
rect_min_size = Vector2( 160, 40 )
text = "Pause"
icon = ExtResource( 2 )

[node name="ConsoleButton" type="Button" parent="Column/MarginContainer/Column/Row"]
margin_left = 1028.0
margin_right = 1204.0
margin_bottom = 63.0
toggle_mode = true
pressed = true
text = "Console"
icon = ExtResource( 9 )

[node name="ViewModeToggleButton" parent="Column/MarginContainer/Column/Row" instance=ExtResource( 8 )]
visible = false
margin_left = 352.0
margin_right = 692.0
margin_bottom = 63.0
hide_labels = true

[node name="Row2" type="HBoxContainer" parent="Column/MarginContainer/Column"]
margin_top = 79.0
margin_right = 1880.0
margin_bottom = 141.0
mouse_filter = 2
alignment = 1

[node name="RestoreButton" type="Button" parent="Column/MarginContainer/Column/Row2"]
margin_left = 725.0
margin_right = 885.0
margin_bottom = 62.0
rect_min_size = Vector2( 160, 40 )
size_flags_horizontal = 0
disabled = true
text = "Reset"
icon = ExtResource( 5 )

[node name="SolutionButton" type="Button" parent="Column/MarginContainer/Column/Row2"]
margin_left = 901.0
margin_right = 1154.0
margin_bottom = 62.0
rect_min_size = Vector2( 160, 40 )
size_flags_horizontal = 0
text = "Show solution"
icon = ExtResource( 4 )
